objects/Inspection_Photo__c.object
<CustomObject>
    <fields>
        <fullName>Content_ID__c</fullName>
        <label>Content ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Field_Value_ID__c</fullName>
        <label>Inspection Field Value</label>
        <referenceTo>Inspection_Field_Value__c</referenceTo>
        <relationshipLabel>Inspection Photos</relationshipLabel>
        <relationshipName>Inspection_Photos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inspection_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>Inspection__c</referenceTo>
        <relationshipLabel>Inspection Photos</relationshipLabel>
        <relationshipName>Inspection_Photos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Inspection Photo</label>
    <nameField>
        <label>Inspection Photo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Photos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>